2001-02-11  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus-extensions/nautilus-customization-data.h:
	Add comment clarifying API changes I made in my last checkin.
	* src/file-manager/fm-properties-window.c: (create_emblems_page):
	Remove some left over code from when the emblems table was hard
	coded to 2 columns.
	* src/nautilus-property-browser.c:
	(make_properties_from_directories):
	Fix a small memory leak.

2001-02-11 John Fleck <jfleck@inkstain.net>

	reviewed by: Ali Abdin <aliabdin@aucegypt.edu>

	* components/help/converters/gnome-db2html2/gdb3html.h
	* /components/help/converters/gnome-db2html2/sect-elements.c
	* /components/help/converters/gnome-db2html2/sect-elements.h
	* /components/help/converters/gnome-db2html2/sect-preparse.c
	* /components/help/converters/gnome-db2html2/toc-elements.c
	add support for <bridgehead> tag in DocBook, fix bug #6492

2001-02-11  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Mathieu Lacage <mathieu@gnome.org>

	* cut-n-paste-code/widgets/nautilusclist/nautilusclist.c: Use
	binary instead of linear search to find the right insert new row
	into a sorted clist. This is part of addressing bug 6290

2001-02-10  Andy Hertzfeld  <andy@eazel.com>

	* src/nautilus-sidebar.c: (add_command_buttons),
	(empty_trash_callback),
	(nautilus_sidebar_trash_state_changed_callback),
	(nautilus_sidebar_update_buttons):
	fixed bug 6052, sidebar needs empty trash button when showing
	trash: directory
	
2001-02-09  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Maciej Stachowiak <mjs@eazel.com>

	* libnautilus-extensions/nautilus-image-table.c:
	(image_table_handle_motion), (ancestor_button_press_event),
	(ancestor_button_release_event):
	Ignore insensitive widgets when doing the event thing.
	
	* src/nautilus-property-browser.c:
	(make_properties_from_directories):
	Add an extra empty space between the erase emblem and the next to
	make it stand out more.  Cleanup property image creation a tiny bit.
